section 17 project food

--- a/s16-forms-and-inputs/01-starting-project/src/index.css
+++ b/s16-forms-and-inputs/01-starting-project/src/index.css
@@ -81,10 +81,10 @@ button:active {
 
 button:disabled,
 button:disabled:hover, button:disabled:active {
-  background-color: lightgray;
-  color: gray;
-  border-color: gray;
-  cursor: not-allowed
+  background-color: #ccc;
+  color: #292929;
+  border-color: #ccc;
+  cursor: not-allowed;
 }
 
 .form-actions {
